<resources>
    <string name="app_name">InClass09Roomo</string>
    <string name="courses">Courses</string>
    <string name="gpa">GPA: </string>
    <string name="hours">Hours: </string>
    <string name="grades">Grades</string>
    <string name="course_name">Course Name</string>
    <string name="course_number">Course Number</string>
    <string name="credit_hours">Credit Hours</string>
    <string name="course_grade">Course Grade</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="C">C</string>
    <string name="D">D</string>
    <string name="F">F</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Create</string>
    <string name="addCourse">Add Course</string>
    <string name="addIcon">Add</string>
    <string name="courseNum_error">Course Number cannot be null/empty.</string>
    <string name="courseName_error">Course name cannot be null/empty.</string>
    <string name="credit_hours_error">Credit Hours cannot be null/empty.</string>
    <string name="grade_error">Select atleast one grade.</string>
    <string name="credit_hours_neg_error">Credit hours cannot be negative</string>
</resources>