<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".CreateCourseFragment">

    <EditText
        android:id="@+id/courseNumberCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/course_number"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/courseNameCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/course_name"
        android:inputType="textPersonName"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseNumberCreate" />

    <EditText
        android:id="@+id/creditHoursCreate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/credit_hours"
        android:inputType="number"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseNameCreate" />

    <TextView
        android:id="@+id/courseGradeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/course_grade"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creditHoursCreate" />

    <RadioGroup
        android:id="@+id/gradeGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintStart_toEndOf="@+id/courseGradeText"
        app:layout_constraintTop_toBottomOf="@+id/creditHoursCreate">

        <RadioButton
            android:id="@+id/gradeA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/A" />

        <RadioButton
            android:id="@+id/gradeB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/B" />

        <RadioButton
            android:id="@+id/gradeC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/C" />

        <RadioButton
            android:id="@+id/gradeD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/D" />

        <RadioButton
            android:id="@+id/gradeF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/F" />
    </RadioGroup>

    <Button
        android:id="@+id/submit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/submit"
        android:textColor="#000000"
        app:backgroundTint="#D7D7D7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gradeGroup" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@android:string/cancel"
        android:textColor="#000000"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit" />

</androidx.constraintlayout.widget.ConstraintLayout>